--- a/text/ondrej-pesek-dp-2018.tex
+++ b/text/ondrej-pesek-dp-2018.tex
@@ -116,6 +116,22 @@
 \newcommand\footnoteref[1]{\protected@xdef\@thefnmark{\ref{#1}}\@footnotemark}
 \makeatother
 
+\usepackage{tikz}
+\usetikzlibrary{arrows.meta, shapes}
+\tikzset{%
+  >={Latex[width=1mm,length=1mm]},
+  % Specifications for style of nodes:
+            base/.style = {rectangle, rounded corners, draw=black,
+                           minimum width=4cm, minimum height=1cm,
+                           text centered, font=\sffamily},
+  activityStarts/.style = {base, fill=blue!30},
+       startstop/.style = {base, fill=red!30},
+    activityRuns/.style = {base, fill=green!30},
+    test/.style = {base, diamond, aspect=2, text width=8em, fill=yellow!30},
+         process/.style = {base, minimum width=2.5cm, fill=orange!15,
+                           font=\ttfamily},
+}
+
 \usepackage[justification=centering]{caption}
 
 % ========================================================================
@@ -136,7 +152,7 @@
 \oborstudia{Geomatics}{}
 
 % označení ústavu
-\ustav{Department of geomatics}{}
+\ustav{Department of Geomatics}{}
 
 % rok obhajoby
 \rok{2018}
