--- a/text/thesiscvut.sty
+++ b/text/thesiscvut.sty
@@ -246,7 +246,7 @@
 \newcommand\oznaceniprohlaseni@cz{Declaration of authorship}
 %% Text prohlaseni
 \newcommand\prohlasenitext@cz{\par\hspace{2ex}
-I declare that the work presented here is, to the best of my knowledge and belief, original and the result of my own investigations, exept as acknowledged. Formulations and ideas taken from other sources are cited as such.}
+I declare that the work presented here is, to the best of my knowledge and belief, original and the result of my own investigations, except as acknowledged. Formulations and ideas taken from other sources are cited as such.}
 
 
 %% Misto prohlaseni
