--- a/text/zkratky.tex
+++ b/text/zkratky.tex
@@ -31,6 +31,9 @@
 	\novazkratka{GRASS}
 	      {GRASS}
 	      {Geographic resources analysis support system}
+	\novazkratka{GUI}
+	      {GUI}
+	      {Graphical user interface}
 	\novazkratka{ILSVRC}
 	      {ILSVRC}
 	      {ImageNet large scale visual recognition challenge}
