fix compilation for recent versions of latex

--- a/text/ondrej-pesek-dp-2018.tex
+++ b/text/ondrej-pesek-dp-2018.tex
@@ -53,6 +53,8 @@
 \usepackage{amsmath}
 \addtolength{\jot}{1em} 
 
+\let\counterwithout\relax
+\let\counterwithin\relax
 \usepackage{chngcntr}
 \counterwithout{footnote}{chapter}
 
