chapter: few first comments

--- a/text/2-bg.tex
+++ b/text/2-bg.tex
@@ -3,7 +3,8 @@
 
 % \setcounter{secnumdepth}{1}
 
-Although it is assumed that the reader has sufficient prior knowledge of 
+Although it is assumed that the reader has sufficient prior knowledge of
+%% ML: convolutional neural networks (CNN)
 artificial neural networks and convolutional neural networks, this part briefly 
 introduces convolutional neural networks, their layer types and few selected 
 architectures. 
@@ -14,8 +15,10 @@ holy book of deep learning, \cite{dl}.
 \section{Introducing convolutional neural networks}
 \label{understanding-cnn}
 
+%% ML: prestoze je CNN uvedena v seznamu zkratek, tak bych ji
+%% navrhoval v minulem odstavci zminit (viz predchozi poznamka)
 If you try to find an introduction to \zk{CNN}s on the internet, you may bump 
-into a common statement that \zk{CNN}s are neuroscience-based deep neural 
+into a common statement that \zk{CNN}s are neuroscience-based deep neural
 networks using convolution and presuming the input is an image. It is not 
 exact. 
 
