--- a/text/literatura.bib
+++ b/text/literatura.bib
@@ -72,6 +72,18 @@
   timestamp = {Wed, 07 Jun 2017 14:41:51 +0200}
 }
 
+@article{masklab,
+  title     = {MaskLab: Instance Segmentation by Refining Object Detection with Semantic and Direction Features},
+  author    = {Liang{-}Chieh CHEN and Alexander HERMANS and George PAPANDREOU and Florian SCHROFF and Peng WANG and Hartwig ADAM},
+  journal   = {CoRR},
+  volume    = {abs/1712.04837},
+  year      = {2017},
+  url       = {http://arxiv.org/abs/1712.04837},
+  archivePrefix = {arXiv},
+  eprint    = {1712.04837},
+  timestamp = {Thu, 04 Jan 2018 12:38:35 +0100}
+}
+
 @Article{all-conv-net,
   title     = {Striving for Simplicity: The All Convolutional Net},
   author    = {Jost Tobias SPRINGERBERG and Alexey DOSOVITSKYI and Thomas BROX and Martin A. RIEDMILLER},
