--- a/text/5-implementation.tex
+++ b/text/5-implementation.tex
@@ -43,7 +43,7 @@ few reasons for this decision:
 Mask \zk{R-CNN} tools created for the practical part of the thesis consist of 
 two modules. \verb|ann.maskrcnn.train| allows user to train a Mask R-CNN model 
 on his own dataset, \verb|ann.maskrcnn.detect| allows him to use that model to 
-detect features in georeferenced files.
+detect features in georeferenced files. Both modules are licensed under GNU \zk{GPL} 2 license.
 
 Along with these modules, a library of Mask \zk{R-CNN} tools was prepared. This 
 library was heavily based on a Python implementation of Mask \zk{R-CNN} written 
@@ -51,7 +51,7 @@ by Waleed Abdulla from Matterport,
 Inc.\footnote{\url{https://matterport.com/about/}}  Matterport, Inc. published 
 their implementation under the MIT License \cite{mit}. The MIT License is a 
 license granting the permission to use the code, copy it, modify it, publish and 
-even to sell it free of charge and is compatible with GNU General Public License 
+even to sell it free of charge and is compatible with GNU \zk{GPL} 
 2 (or newer) \cite{gplv2} of GRASS GIS. Scripts in the library are also under 
 the MIT License and moreover, Waleed Abdulla himself agreed with the usage and 
 modifications of his code for purposes of the GRASS GIS usage. The Matterport, 
