--- a/text/literatura.bib
+++ b/text/literatura.bib
@@ -6,6 +6,22 @@
     year={2016}
 }
 
+@book{diveintopython,
+  title=	{Dive Into Python},
+  author=	{Mark PILGRIM},
+  publisher=	{Apress},
+  year=		{2004},
+  isbn =	{978-1-59059-356-1},
+}
+
+@book{tf,
+  title=	{Getting Started with TensorFlow},
+  author=	{Giancarlo ZACCONE},
+  publisher=	{Packt Publishing},
+  year=		{2016},
+  isbn =	{978-1-78646-857-4},
+}
+
 @book{opencv,
   title={Learning OpenCV: Computer vision with the OpenCV library},
   author={Gary BRADSKI and Adrian KAEHLER},
