--- a/text/zkratky.tex
+++ b/text/zkratky.tex
@@ -28,6 +28,9 @@
 	\novazkratka{GIS}
 	      {GIS}
 	      {Geographic information system}
+	\novazkratka{GPL}
+	      {GPL}
+	      {General public license}
 	\novazkratka{GRASS}
 	      {GRASS}
 	      {Geographic resources analysis support system}
@@ -43,6 +46,9 @@
 	\novazkratka{mAP}
 	      {mAP}
 	      {Mean average precision}
+	\novazkratka{OGC}
+	      {OGC}
+	      {Open geospatial consortium}
 	\novazkratka{R-CNN}
 	      {R-CNN}
 	      {Region-based convolutional neural network}
