--- a/text/4-technologies.tex
+++ b/text/4-technologies.tex
@@ -1,14 +1,104 @@
 \chapter{Used technologies}
 \label{technologies}
 
+This chapter briefly introduces the most important technologies used during
+the~development of modules for GRASS GIS. It means that besides GRASS GIS itself, 
+the~Python language and its libraries TensorFlow and Keras will be introduced.
+
 \section{GRASS GIS}
 \label{grass}
+
+\begin{figure}[H]
+   \centering
+	\includegraphics[width=0.4\linewidth]{./pictures/grass-logo.png}
+	\caption[GRASS GIS logo]{GRASS GIS logo, source: \url{https://grass.osgeo.org/download/logos/}}
+      \label{fig:grass-logo}
+\end{figure}
+
+The history of \zk{GRASS} \zk{GIS} (an acronym for Geographic Resources Analysis 
+Support System Geographic Information System) started in year 1982 at the U.S. 
+Army Corps of Engineers Construction Engineering Research Laboratory, but the 
+version 1.0 under the name \zk{GRASS} was released later, in 1985. However, its 
+way lead from the national project to the international Open GRASS Consortium in 
+the mid 1990s. This consortium is perceived as an ancestor of today's Open 
+Geospatial Consortium (\zk{OGC}). In 1999, \zk{GRASS} \zk{GIS} was published 
+under GNU General Public License (\zk{GPL}).
+
+\zk{GRASS} \zk{GIS} grown to a cross-platform free and open-source \zk{GIS} 
+maintained by an international team of developers and users and licensed under 
+the GNU \zk{GPL} license allowing users to perform geospatial data management 
+and analysis for both raster and vector data, image processing, geocoding and 
+visualization. Within its more than 300 modules, it supports also 
+spatio-temporal data.
+
+For more info about \zk{GRASS} \zk{GIS}, please see its original 
+website\footnote{\url{https://grass.osgeo.org/documentation/general-overview/}}.
 
 \section{Python}
 \label{python}
 
+\begin{figure}[H]
+   \centering
+	\includegraphics[width=\linewidth]{./pictures/python-logo.png}
+	\caption[Python logo]{Python logo, source: \url{https://www.python.org/community/logos/}}
+      \label{fig:python-logo}
+\end{figure}
+
+Python is a cross-platform open-source interpreted programming language. Python 
+was invented by a~Dutch programmer and Monty Python's Flying Circus fan Guido 
+van~Rossum in year 1991. Due to its user-friendly and readable structure, it is 
+more and more popular.
+
+It is very popular also in the field of open-source \zk{GIS}. Many modules for 
+\zk{GRASS} \zk{GIS} are written in Python and Python is the most used language 
+in QGIS\footnote{\url{https://qgis.org/}}.
+
+For info about programming in Python, please see \cite{diveintopython}.
+
 \section{TensorFlow}
 \label{tf}
 
+\begin{figure}[H]
+   \centering
+	\includegraphics[scale=0.5]{./pictures/tf-logo.png}
+	\caption[TensorFlow logo]{TensorFlow logo, source: \url{https://www.tensorflow.org/images/tf_logo_transp.png}}
+      \label{fig:tf-logo}
+\end{figure}
+
+TensorFlow is an open-source software library developed by Google Brain 
+Team\footnote{\url{https://research.google.com/teams/brain/}} primarily for the 
+purpose of neural network research. TesorFlow uses data flow graphs, where a 
+node represent a mathematical operation and an edge represents a~tensor (a 
+multidimensional array). A toolkit for visualization of these graphs is called 
+TensorBoard.
+
+TensorFlow is available for Python and C++ programming languages. Its usage 
+optimizes mathematical expressions and as it was developed for the purpose of 
+neural networks, the main focus was dedicated to this field and TensorFlow 
+provides a lot of functions useful for deep learning.
+
+A good starting point is book Getting Started with TensorFlow \cite{tf}. A 
+documentation and examples can be found also at the original 
+website\footnote{\url{https://www.tensorflow.org/}}.
+
 \section{Keras}
 \label{keras}
+
+\begin{figure}[H]
+   \centering
+	\includegraphics[width=\linewidth]{./pictures/keras-logo.png}
+	\caption[Keras logo]{Keras logo, source: \url{https://keras.io/}}
+      \label{fig:keras-logo}
+\end{figure}
+
+Keras is an open-source software library written in Python and using TensorFlow, 
+Microsoft Cognitive Toolkit, Theano or MXNet as a backend tensor manipulation 
+library.
+
+Keras is again developed for the purpose of deep learning. Its powerful feature 
+is the content of extensible objects for defining different types of layers (see 
+chapter \ref{layers}), models, loss functions and other tools widely used in the 
+field of \zk{ANN}s.
+
+For a wider documentation, please see the original 
+website\footnote{\url{https://keras.io/}}.
